# QualcommNPU

./: ArmNPU.sln  README.md
2.22.6.240515/: NOTICE.txt  NOTICE_WINDOWS.txt  QNN_NOTICE.txt  QNN_README.txt  QNN_ReleaseNotes.txt  QNN_TFLITE_DELEGATE_NOTICE.txt  QNN_TFLITE_DELEGATE_README.txt  QNN_TFLITE_DELEGATE_ReleaseNotes.txt  ReleaseNotes.txt  ReleaseNotesWindows.txt  sdk.yaml
2.22.6.240515/benchmarks/QNN/: config_help.json  inceptionV3_quantized_sample.json  inceptionV3_sample.json  qnn_bench.py
2.22.6.240515/benchmarks/QNN/bm_utils/: __init__.py  bm_bm.py  bm_config.py  bm_config_restrictions.py  bm_constants.py  bm_device.py  bm_jsonkeys.py  bm_md5.py  bm_parser.py  bm_writer.py  error.py  qnn.py  qnnbm_artifacts_aarch64-android.json  qnnbm_artifacts_aarch64-oe-linux-gcc11.2.json  qnnbm_artifacts_aarch64-oe-linux-gcc8.2.json  qnnbm_artifacts_aarch64-oe-linux-gcc9.3.json  qnnbm_artifacts_aarch64-ubuntu-gcc7.5.json  qnnbm_artifacts_aarch64-ubuntu-gcc9.4.json  qnnbm_artifacts_aarch64-windows-msvc.json
2.22.6.240515/benchmarks/QNN/common_utils/: __init__.py  adb.py  common.py  constants.py  device.py  env.py  exceptions.py  tshell_server.py
2.22.6.240515/benchmarks/SNPE/: config_help.json  inception_v3_sample.json
2.22.6.240515/benchmarks/SNPE/snpebm/: snpebm_bm.py  snpebm_config.py  snpebm_config_restrictions.py  snpebm_constants.py  snpebm_device.py  snpebm_jsonkeys.py  snpebm_parser.py
2.22.6.240515/docs/QNN/: genindex.html  index.html  search.html  searchindex.js
2.22.6.240515/docs/QNN/HTP/: common_default_package_ops_usage_examples.html  common_optimization_utility_funcs_usage_examples.html  htp_core_headers.html  implementing_ops.html  opPackage_API_version_guide.html  optimization_grammar.html  (+6 more)
2.22.6.240515/examples/QNN/SampleApp/: CMakeLists.txt  Makefile  blog.txt
2.22.6.240515/examples/QNN/SampleApp/make/: Android.mk  Application.mk  Makefile.hexagon  Makefile.linux-x86_64  Makefile.oe-linux-aarch64-gcc11.2  Makefile.oe-linux-aarch64-gcc8.2  Makefile.oe-linux-aarch64-gcc9.3  Makefile.ubuntu-aarch64-gcc7.5  Makefile.ubuntu-aarch64-gcc9.4
2.22.6.240515/examples/QNN/SampleApp/src/: CMakeLists.txt  QnnSampleApp.cpp  main.cpp
2.22.6.240515/examples/QNN/Saver/: CMakeLists.txt  Makefile  README.txt
2.22.6.240515/examples/QNN/Saver/make/: Android.mk  Application.mk  Makefile.linux-x86_64  Makefile.oe-linux-aarch64-gcc11.2  Makefile.oe-linux-aarch64-gcc8.2  Makefile.oe-linux-aarch64-gcc9.3  Makefile.ubuntu-aarch64-gcc7.5  Makefile.ubuntu-aarch64-gcc9.4
2.22.6.240515/examples/QNN/TFLiteDelegate/SkipNodeExample/: CMakeLists.txt  README.txt  main.cc
2.22.6.240515/examples/QNN/TFLiteDelegate/SkipNodeExample/model/: mix_precision_sample.tflite
2.22.6.240515/examples/SNPE/NativeCpp/SampleCode_CAPI_Windows/: CMakeLists.txt  GetOpt.cpp  GetOpt.hpp  LoadInputTensor.hpp  SaveOutputTensor.cpp  SetBuilderOptions.hpp  Util.cpp  Util.hpp  main.cpp
2.22.6.240515/examples/SNPE/NativeCpp/SampleCode_Windows/: CMakeLists.txt  LoadInputTensor.cpp  PreprocessInput.cpp  SaveOutputTensor.cpp  SetBuilderOptions.cpp  SetBuilderOptions.hpp  Util.cpp  Util.hpp  main.cpp
2.22.6.240515/include/QNN/: QnnCommon.h  QnnInterface.h  QnnOpDef.h  QnnSdkBuildId.h  QnnTypes.h
2.22.6.240515/lib/aarch64-windows-msvc/: QnnChrometraceProfilingReader.lib  QnnCpu.lib  QnnDsp.lib  QnnHtp.lib  SNPE.lib
2.22.6.240515/lib/arm64x-windows-msvc/: QnnCpu.lib  QnnHtp.lib  QnnHtpNetRunExtensions.lib  SNPE.lib
2.22.6.240515/lib/x86_64-linux-clang/: libc++.so.1  libc++abi.so.1.0
2.22.6.240515/lib/x86_64-windows-msvc/: QnnCpu.lib  SNPE.lib
2.22.6.240515/share/QNN/converter/: CMakeLists.txt  Makefile.linux-x86_64  Makefile.oe-linux-aarch64-gcc11.2  Makefile.oe-linux-aarch64-gcc8.2  Makefile.oe-linux-aarch64-gcc9.3  Makefile.ubuntu-aarch64-gcc7.5  Makefile.ubuntu-aarch64-gcc9.4
2.22.6.240515/share/QNN/converter/jni/: Android.mk  Application.mk  QnnModel.cpp  QnnTypeMacros.hpp  QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
2.22.6.240515/share/QNN/converter/jni/windows/: QnnModelPal.cpp
ArmNPU/: ArmNPU.csproj  Program.cs  QualcommNPU.cs  QualcommNPUWrapper.cs  blog.txt
SampleApplication/: SampleApplication.sln  SampleApplication.vcxproj  SampleApplication.vcxproj.filters  StructOffsetGenerator.cpp  raw_list.txt  target_raw_list.txt
SampleApplication/cropped/: raw_list.txt
SampleApplication/output/Result_0/: InceptionV3_Predictions_Reshape_1_0.raw
SampleApplication/output/Result_1/: InceptionV3_Predictions_Reshape_1_0.raw
SampleApplication/output/Result_2/: InceptionV3_Predictions_Reshape_1_0.raw
SampleApplication/output/Result_3/: InceptionV3_Predictions_Reshape_1_0.raw
SampleApplication/src/: QnnSampleApp.cpp  QnnSampleApp.hpp  main.cpp
SampleApplication/src/Utils/: BuildId.hpp  DynamicLoadUtil.cpp  IOTensor.cpp  IOTensor.hpp  QnnSampleAppUtils.cpp
SampleApplication/src/WrapperUtils/: QnnWrapperUtils.cpp
SampleApplication/struct_offsets/: ApiVersion_offsets.json  GraphConfigInfo_t_offsets.json  GraphInfo_t_offsets.json  QnnBwAxisScaleOffset_offsets.json  QnnInterface_t_offsets.json  Qnn_ApiVersion_t_offsets.json  Qnn_BwAxisScaleOffset_t_offsets.json  Qnn_ClientBuffer_t_offsets.json  Qnn_OpConfigV1_t_offsets.json  Qnn_OpConfig_t_offsets.json  Qnn_QuantizeParams_t_offsets.json  Qnn_ScaleOffset_t_offsets.json  Qnn_SparseLayoutHybridCoo_t_offsets.json  Qnn_SparseParams_t_offsets.json  Qnn_TensorSetV1_t_offsets.json  Qnn_TensorSet_t_offsets.json  Qnn_TensorV1_t_offsets.json  Qnn_TensorV2_t_offsets.json  Qnn_Tensor_t_offsets.json  Qnn_Version_t_offsets.json
SampleCSharpApplication/: Blog.txt  DllExportReader.cs  DynamicLoadUtility.cs  GlobalUsings.cs  GraphInfoManager.cs  INPUInference.cs  IOTensor.cs  NPUInference.cs  Program.cs  QnnDelegates.cs  QnnFunctionPointers.cs  QnnInitializer.cs  QnnInterface.cs  QnnInterface_t.cs  QnnSampleApp.cs  QnnTypes.cs  SampleCSharpApplication.csproj  SampleCSharpApplication.sln  StatusCode.cs  TensorManager.cs  UnmanagedMemoryTracker.cs  Utilities.cs
SampleCSharpApplication/Properties/: launchSettings.json
TestProject/: UnitTest1.cs
(+3975 files in other folders)
