#=============================================================================
#
#  Copyright (c) 2022 Qualcomm Technologies, Inc.
#  All Rights Reserved.
#  Confidential and Proprietary - Qualcomm Technologies, Inc.
#
#=============================================================================

cmake_minimum_required (VERSION 3.14)
project(SampleApp)
add_subdirectory(src)
